--- a/templates/base.html
+++ b/templates/base.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>台北一日遊</title>
     <link rel="stylesheet" type="text/css" href="/static/css/base.css">
+    {% block css %}{% endblock %}
 </head>
 <body>
     <nav>
         <div class="navbarContainer">
-            <div class="navbarTitle">台北一日遊</div>
+            <div class="navbarTitle">
+                <a href="/">台北一日遊</a>
+            </div>
             <div class="btnContainer">
                 <div class="btn2">
                     <a href="#">預定行程</a>
