--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 
+{% block css %}
+<link rel="stylesheet" href="/static/css/index.css">
+{% endblock %}
 {% block header %}
 <header>
     <div class="bg">
