update front-end MVC structure

--- a/app/templates/attraction.html
+++ b/app/templates/attraction.html
@@ -58,5 +58,5 @@
 {% endblock %}
 {% block main %}
 <main></main>
-<script src="/static/js/attraction.js"></script>
+<script src="/static/js/attraction.js" type="module"></script>
 {% endblock %}
