--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,7 +13,7 @@
             </div>
             <div class="search">
                 <form class="searchForm">
-                    <input type="text" placeholder="輸入景點查詢名稱">
+                    <input type="text" placeholder="輸入景點查詢名稱" class="search-input">
                     <button type="submit">
                         <img src="/static/img/icon_search.png">
                     </button>
@@ -25,5 +25,5 @@
 {% endblock %}
 {% block main %}
 <main></main>
-<script src="/static/js/index.js"></script>
+<script src="/static/js/index.js" type="module"></script>
 {% endblock %}
