--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -11,16 +11,16 @@ nav{
     position: fixed;
     top: 0;
     width: 100%;
-    display: flex;
+    /* display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
     height: 54px;
     background: #FFFFFF;
 }
 .navbarContainer{
     width: 1200px;
     height: 34px;
-    margin: auto;
+    margin: 10px auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -59,6 +59,76 @@ nav{
 }
 a{
     text-decoration: none;
+}
+
+/* section */
+section{
+    transform: translateY(26px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.login, .register{
+    display: none;
+}
+.user-container{
+    width: 340px;
+    /* height: 275px; */
+    background: #FFFFFF;
+    box-shadow: 0px 4px 60px #AAAAAA;
+    border-radius: 6px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.user-container>.title-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 15px auto;
+    width: 310px;
+    height: 27px;
+}
+.title-container>.title{
+    font-size: 24px;
+    font-weight: 700;
+    color: #666666;
+}
+.title-container>img{
+    transform: translateX(70px);
+    cursor: pointer;
+}
+.form-container>form{
+    display: flex;
+    flex-direction: column;
+}
+.form-container>form>input{
+    width: 310px;
+    height: 47px;
+    margin-bottom: 15px;
+    border: 1px solid #CCCCCC;
+    box-sizing: border-box;
+    border-radius: 5px;
+    padding: 15px;
+}
+.form-container>form>button{
+    width: 310px;
+    height: 47px;
+    background: #448899;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    color: #FFFFFF;
+    border: none;
+    cursor: pointer;
+}
+.user-container>.info{
+    display: flex;
+    color: #666666;
+    margin-bottom: 15px;
+}
+.show{
+    display: block;
 }
 
 /* footer */
