--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,10 +19,51 @@
                     <a href="#">預定行程</a>
                 </div>
                 <div class="btn1">
-                    <a href="#">登入/註冊</a>
+                    <a href="#" class="member">登入/註冊</a>
                 </div>
             </div>
         </div>
+        <section>
+            <div class="login">
+                <div class="user-container">
+                    <div class="title-container">
+                        <div class="title">登入會員帳號</div>
+                        <img src="/static/img/icon_close.png" class="login-close">
+                    </div>
+                    <div class="form-container">
+                        <form>
+                            <input type="email" placeholder="輸入電子信箱">
+                            <input type="password" placeholder="輸入密碼">
+                            <button type="submit">登入帳戶</button>
+                        </form>
+                    </div>
+                    <div class="info">
+                        <div>還沒有帳戶？</div>
+                        <a href="#">點此註冊</a>
+                    </div>
+                </div>
+            </div>
+            <div class="register">
+                <div class="user-container">
+                    <div class="title-container">
+                        <div class="title">註冊會員帳號</div>
+                        <img src="/static/img/icon_close.png" class="register-close">
+                    </div>
+                    <div class="form-container">
+                        <form>
+                            <input type="text" placeholder="輸入姓名">
+                            <input type="email" placeholder="輸入電子信箱">
+                            <input type="password" placeholder="輸入密碼">
+                            <button type="submit">註冊新帳戶</button>
+                        </form>
+                    </div>
+                    <div class="info">
+                        <div>已經有帳戶了？</div>
+                        <a href="#">點此登入</a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </nav>
     {% block header %}{% endblock %}
     {% block main %}{% endblock %}
