--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,14 +16,14 @@
             </div>
             <div class="btnContainer">
                 <div class="btn2">
-                    <a href="#">預定行程</a>
+                    <div class="booking">預定行程</div>
                 </div>
                 <div class="btn1">
                     <div class="member">登入/註冊</div>
                 </div>
             </div>
         </div>
-        <section>
+        <section class="nav-form">
             <div class="login">
                 <div class="user-container">
                     <div class="title-container">
