--- a/app/static/css/booking.css
+++ b/app/static/css/booking.css
@@ -1,33 +1,214 @@
+*{
+    color: #666666;
+}
 header{
     margin-top: 54px;
+    /* height: 337px; */
     color: #666666;
-    padding: 40px 0px 30px 0px;
+    padding: 40px 0px 40px 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 header>div:first-child{
     width: 1000px;
     height: 27px;
-    margin: auto;
-    margin-bottom: 30px;
+    margin: 6px auto 35px auto;
     font-weight: 700;
 }
-header>div:last-child{
+header>.booking-info{
     width: 1000px;
-    height: 24px;
+    height: 200px;
+    display: flex;
+}
+.booking-info>.img-container{
+    width: 250px;
+    height: 200px;
+}
+.img-container>img{
+    width: 250px;
+    height: 200px;
+    object-fit: cover;
+}
+.flex-container{
+    display: flex;
+    margin-bottom: 15px;
+}
+.booking-info>.info-container{
+    width: 700px;
+    /* height: 170px; */
+    margin-left: 22px;
+}
+.info-container>div:first-child{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+}
+.info-container>div:first-child>.delete-icon{
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+}
+.info-container>div>.title-container{
+    font-weight: 700;
+    color: #448899;
+    cursor: pointer;
+}
+.flex-container>.info-title{
+    font-weight: 700;
+}
+
+hr{
+    max-width: 1200px;
+    border: 1px solid #E8E8E8;
+    margin: auto;
+    margin-bottom: 40px;
+}    
+main{
+    max-width: 1200px;
     margin: auto;
 }
-footer{
-    align-items: flex-start;
-    min-height: calc(100vh - 54px - 151px);
+form{
+    max-width: 1200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
-footer>div{
+form>.contact-container{
+    width: 980px;
+    height: 227px;
+    box-sizing: border-box;
+    margin-bottom: 45px;
+}
+.contact-container>.title, .payment-container>.title{
+    width: 980px;
+    height: 24px;
+    font-size: 19px;
+    font-weight: 700;
+    margin-bottom: 24px;
+}
+.contact-container>.input-container, .payment-container>.input-container{
+    width: 980px;
+    height: 38px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+}
+.input-container>label{
+    width: 81px;
+    height: 24px;
+}
+.input-container>input{
+    box-sizing: border-box;
+    width: 200px;
+    height: 38px;
+    border: 1px solid #E8E8E8;
+    border-radius: 5px;
+    padding: 10px
+}
+.contact-container>.notice{
+    width: 608px;
+    height: 24px;
+    font-weight: 700;
+}
+form>.payment-container{
+    width: 980px;
+    height: 188px;
+    margin-bottom: 40px;
+}
+form>.confirm-container{
+    width: 980px;
+    height: 100px;
+}
+main>form>hr{
+    width: 100%;
+    border: 1px solid #E8E8E8;
+}
+main>form>.confirm-container{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+.confirm-container>div{
+    font-weight: 700;
+}
+.confirm-container>button{
+    width: 173px;
+    height: 36px;
+    background: #448899;
+    border-radius: 5px;
+    border: none;
+    color: #FFFFFF;
+    margin: auto 0;
+}
+.pop-up{
+    align-items: flex-start;
+    min-height: calc(100vh - 54px - 172px);
+}
+.pop-up>div{
     margin-top: 45px;
+}
+.no-booking{
+    width: 1000px;
+    height: 24px;
+}
+.hide{
+    display: none;
 }
 
 @media(max-width: 1200px){
     header>div:first-child{
         width: 90%;
     }
-    header>div:last-child{
+    header>.booking-info{
+        width: 90%;
+        height: 100%;
+    }
+    .booking-info>.img-container{
+        width: 90%;
+        height: auto;
+    }
+    .info-container>div:first-child{
+        margin-bottom: 15px;
+    }
+    .img-container>img{
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+    }
+    .booking-info>.info-container{
+        width: 90%;
+    }
+    hr{
+        width: 90%;
+    } 
+    form>.contact-container{
+        width: 90%;
+    }
+    .contact-container>.title, .payment-container>.title{
+        width: 90%;
+    }
+    .contact-container>.input-container, .payment-container>.input-container{
+        width: 90%;
+    }
+    .input-container>label{
+        width: 81px;
+    }
+    .input-container>input{
+        width: 200px;
+    }
+    .contact-container>.notice{
+        width: 99%;
+        height: 48px;
+    }
+    form>.payment-container{
+        width: 90%;
+    }
+    form>.confirm-container{
+        width: 90%;
+    }
+    main>form>hr{
         width: 90%;
     }
 }
@@ -35,7 +216,60 @@ footer>div{
     header>div:first-child{
         width: 90%;
     }
-    header>div:last-child{
+    header>.booking-info{
+        width: 100%;
+        height: 100%;
+        flex-direction: column;
+        align-items: center;
+    }
+    .booking-info>.img-container{
+        width: 90%;
+        height: auto;
+        margin-bottom: 35px;
+    }
+    .info-container>div:first-child{
+        margin-bottom: 15px;
+    }
+    .img-container>img{
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+    }
+    .booking-info>.info-container{
+        width: 90%;
+    }
+    .info-container>div:first-child>.delete-icon{
+        transform: translateY(180px);
+    }
+    hr{
+        width: 90%;
+    } 
+    form>.contact-container{
+        width: 90%;
+    }
+    .contact-container>.title, .payment-container>.title{
+        width: 90%;
+    }
+    .contact-container>.input-container, .payment-container>.input-container{
+        width: 90%;
+    }
+    .input-container>label{
+        width: 81px;
+    }
+    .input-container>input{
+        width: 200px;
+    }
+    .contact-container>.notice{
+        width: 99%;
+        height: 48px;
+    }
+    form>.payment-container{
+        width: 90%;
+    }
+    form>.confirm-container{
+        width: 90%;
+    }
+    main>form>hr{
         width: 90%;
     }
 }
