--- a/app/templates/booking.html
+++ b/app/templates/booking.html
@@ -5,7 +5,63 @@
 {% endblock %}
 {% block header %}
 <header>
-    <div>您好，Yakko，待預訂的行程如下：</div>
-    <div>目前沒有任何待預訂的行程</div>
+    <div>您好，<span class="user-name">Yakko</span>，待預訂的行程如下：</div>
+    <div class="no-booking hide">目前沒有任何待預訂的行程</div>
+    <section class="booking-info">
+        <div class="img-container"></div>
+        <div class="info-container">
+            <div>
+                <a class="title-container"></a>
+                <img src="/static/img/icon_delete.png" class="delete-icon">
+            </div>
+            <div class="date-container flex-container"></div>
+            <div class="time-container flex-container"></div>
+            <div class="price-container flex-container"></div>
+            <div class="address-container flex-container"></div>
+        </div>
+    </section>
 </header>
+<hr>
+<main>
+    <form>
+        <div class="contact-container">
+            <div class="title">您的聯絡資訊</div>
+            <div class="input-container">
+                <label for="name">聯絡姓名：</label>
+                <input type="text" name="name" class="contact-name" required>
+            </div>
+            <div class="input-container">
+                <label for="email">連絡信箱：</label>
+                <input type="email" name="email" class="contact-email" required>
+            </div>
+            <div class="input-container">
+                <label for="phone">手機號碼：</label>
+                <input type="tel" name="phone" required>
+            </div>
+            <div class="notice">請保持手機暢通，準時到達，導覽人員將用手機與您聯繫，務必留下正確的聯絡方式。</div>
+        </div>
+        <hr>
+        <div class="payment-container">
+            <div class="title">信用卡付款資訊</div>
+            <div class="input-container">
+                <label for="credit-number">卡片號碼：</label>
+                <input type="tel" name="credit-number" inputmode="numeric" pattern="[0-9\s]{13,19}" maxlength="19" placeholder="**** **** **** ****" required>
+            </div>
+            <div class="input-container">
+                <label for="expiry-date">過期時間：</label>
+                <input type="month" name="expiry-date" required>
+            </div>
+            <div class="input-container">
+                <label for="security-code">驗證密碼：</label>
+                <input type="password" name="security-code" placeholder="CVV" required>
+            </div>
+        </div>
+        <hr>
+        <div class="confirm-container">
+            <div>總價：新台幣 2000 元</div>
+            <button type="submit">確認訂購並付款</button>
+        </div>
+    </form>
+</main>
+<script src="/static/js/booking.js" type="module"></script>
 {% endblock %}
