fixed some HTML and CSS

--- a/app/static/css/booking.css
+++ b/app/static/css/booking.css
@@ -161,6 +161,9 @@ main>form>.confirm-container{
     header>div:first-child{
         width: 90%;
     }
+    .no-booking{
+        width: 90%;
+    }
     header>.booking-info{
         width: 90%;
         height: 100%;
