--- a/app/templates/booking.html
+++ b/app/templates/booking.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block header %}
 <header>
-    <div>您好，<span class="user-name">Yakko</span>，待預訂的行程如下：</div>
+    <div>您好，<span class="user-name"></span>，待預訂的行程如下：</div>
     <div class="no-booking hide">目前沒有任何待預訂的行程</div>
     <section class="booking-info">
         <div class="img-container"></div>
