--- a/app/templates/booking.html
+++ b/app/templates/booking.html
@@ -21,7 +21,7 @@
         </div>
     </section>
 </header>
-<hr>
+<div class="hr"></div>
 <main>
     <form>
         <div class="contact-container">
@@ -40,7 +40,7 @@
             </div>
             <div class="notice">請保持手機暢通，準時到達，導覽人員將用手機與您聯繫，務必留下正確的聯絡方式。</div>
         </div>
-        <hr>
+        <div class="hr"></div>
         <div class="payment-container">
             <div class="title">信用卡付款資訊</div>
             <div class="input-container">
@@ -56,7 +56,7 @@
                 <input type="password" name="security-code" placeholder="CVV" required>
             </div>
         </div>
-        <hr>
+        <div class="hr"></div>
         <div class="confirm-container">
             <div>總價：新台幣 2000 元</div>
             <button type="submit">確認訂購並付款</button>
