--- a/app/static/css/booking.css
+++ b/app/static/css/booking.css
@@ -97,13 +97,16 @@ form>.contact-container{
     width: 81px;
     height: 24px;
 }
-.input-container>input{
+.input-container>input, .tpfield{
     box-sizing: border-box;
     width: 200px;
     height: 38px;
     border: 1px solid #E8E8E8;
     border-radius: 5px;
-    padding: 10px
+    padding: 10px;
+}
+input{
+    -webkit-box-shadow: 0 0 0 30px white inset;
 }
 .contact-container>.notice{
     width: 608px;
@@ -139,6 +142,7 @@ main>form>.confirm-container{
     border: none;
     color: #FFFFFF;
     margin: auto 0;
+    cursor: pointer;
 }
 .pop-up{
     align-items: flex-start;
@@ -153,6 +157,15 @@ main>form>.confirm-container{
 }
 .hide{
     display: none;
+}
+.tappay-field-focus, input:focus{
+    border: 2px solid rgb(13, 118, 189);
+}
+.invalid{
+    border: 2px solid red;
+}
+.valid{
+    border: 2px solid  green;
 }
 
 @media(max-width: 1200px){
