--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,10 +16,10 @@
             </div>
             <div class="btnContainer">
                 <div class="btn2">
-                    <div class="booking">預定行程</div>
+                    <div class="booking hide">預定行程</div>
                 </div>
                 <div class="btn1">
-                    <div class="member">登入/註冊</div>
+                    <div class="member"></div>
                 </div>
             </div>
         </div>
@@ -67,7 +67,7 @@
     </nav>
     {% block header %}{% endblock %}
     {% block main %}{% endblock %}
-    <footer>
+    <footer class="hide">
         <div>COPYRIGHT © 2021 台北一日遊</div>
     </footer>
     <script src="/static/js/user.js"></script>
