--- a/app/static/css/thankyou.css
+++ b/app/static/css/thankyou.css
@@ -93,7 +93,9 @@ footer{
 footer>div{
     margin-top: 45px;
 }
-
+.hide{
+    display: none;
+}
 @media(max-width: 700px){
     header>div:first-child{
         width: 90%;
