--- a/app/templates/attraction.html
+++ b/app/templates/attraction.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="/static/css/attraction.css">
 {% endblock %}
 {% block header %}
-<header>
+<header class="hide">
     <section>
         <div class="img-container">
             <div class="inner-img-container"></div>
@@ -57,6 +57,6 @@
 <hr>
 {% endblock %}
 {% block main %}
-<main></main>
+<main class="hide"></main>
 <script src="/static/js/attraction.js" type="module"></script>
 {% endblock %}
