--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,6 +21,10 @@
                 <div class="btn1">
                     <div class="member"></div>
                 </div>
+                <div class="user-icon hide">
+                    <a class="capital"></a>
+                    <!-- <div class="capital">N</div> -->
+                </div>
             </div>
         </div>
         <section class="nav-form">
