--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,10 +21,9 @@
                 <div class="btn1">
                     <div class="member"></div>
                 </div>
-                <div class="user-icon hide">
-                    <a class="capital"></a>
-                    <!-- <div class="capital">N</div> -->
-                </div>
+                <a class="user-icon hide">
+                    <div class="capital"></div>
+                </a>
             </div>
         </div>
         <section class="nav-form">
@@ -66,6 +65,11 @@
                         <div class="login-btn">已經有帳戶了？點此登入</div>
                     </div>
                 </div>
+            </div>
+            <div class="form-container error-form hide">
+                <div class="title">付款失敗</div>
+                <div class="message">請重新確認付款資訊</div>
+                <button type="button" class="btn">確定</button>
             </div>
         </section>
     </nav>
